--- a/Mini-tiktok/src/main/resources/application.yml
+++ b/Mini-tiktok/src/main/resources/application.yml
@@ -4,3 +4,10 @@ spring:
     url: jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&useSSL=true
     username: root
     password: 123456
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+server:
+  port: 8080
+
+
